--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,10 @@ certifi==2025.1.31
 charset-normalizer==3.4.1
 Django==5.1.6
 django-cors-headers==4.6.0
+gunicorn==23.0.0
 idna==3.10
 mpmath==1.3.0
+packaging==24.2
 requests==2.32.3
 sqlparse==0.5.3
 sympy==1.13.3
